@@ -1,6 +1,6 @@
 Package: oce
-Version: 0.6-7
-Date: 2011-09-26
+Version: 0.6-8
+Date: 2011-09-27
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
